--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
         </div>
       </div>
     </div>
-
+    <footer>
+      <div class="footer">
+        <a href="https://github.com/codingGosia">GitHub</a>
+      </div>
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
